convertedToMDAPI/objects/Patient__c.object
<CustomObject>
    <description>Master record of the patient</description>
    <label>Patient</label>
    <nameField>
        <displayFormat>ID-SF-{000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BodyWeightInKg__c</fullName>
        <description>PATIENT’S WEIGHT AT THE TIME OF PRODUCT ORDER</description>
        <inlineHelpText>Body Weight in Kilogramm (kg), with one decimal place, at the time of product order</inlineHelpText>
        <label>Body Weight in kg</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateOfBirthText__c</fullName>
        <formula>TEXT(YEAR(DateOfBirth__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(DateOfBirth__c)) &amp; &quot;-&quot; &amp; TEXT(Day(DateOfBirth__c))</formula>
        <inlineHelpText>DOB shown as text in YYYY-MM-DD Format</inlineHelpText>
        <label>DOB as Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <description>Standard Date Field, will be split to 3 fields by formula</description>
        <inlineHelpText>Select the DOB of patient in Date Format</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Date of Birth (DOB)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First Name of Patient</description>
        <inlineHelpText>First Name of Patient</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last Name of Patient</description>
        <inlineHelpText>Last Full Name of Patient</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleNameInitial__c</fullName>
        <description>one letter only</description>
        <inlineHelpText>one letter only, e.g. for John please insert a &quot;J&quot;</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Middle Name Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PatientClassification__c</fullName>
        <inlineHelpText>Pediatric / Adult</inlineHelpText>
        <label>Patient Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pediatric</fullName>
                </value>
                <value>
                    <fullName>Young Adult</fullName>
                </value>
                <value>
                    <fullName>Adult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiteAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Patient</fullName>
        <active>true</active>
        <description>Standard Record Type</description>
        <label>Patient</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>